<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator2</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="name2">Name</string>
    <string name="age2">Age</string>
    <string name="Age">Age</string>
    <string name="act2">Start Other Activity</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="result">Result</string>
    <string name="Add">Add</string>
    <string name="Subtract">Subtract</string>
    <string name="Divide">Divide</string>
    <string name="Multiply">Multiply</string>
    <string name="Factorial">Factorial</string>
    <string name="Save">Save</string>
    <string name="Load">Load</string>
    <string name="pick_date">Pick Date</string>
    <string name="title_activity_save">Save</string>
    <string name="show_date">Month-Day-Year</string>

</resources>
