<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:gravity="center">
    
    <!-- Name and Age. Used to display values passed back from second Activity -->
    <TextView
   		android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/Name" />
    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
    <TextView
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/Age" />
    <EditText
        android:id="@+id/age"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    <Button android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act2" />
 
    <!-- EditTexts for calculator -->
    <TextView
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/first" />
    <EditText
        android:id="@+id/num1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    <TextView
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/second" />
    <EditText
        android:id="@+id/num2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    <TextView
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/result" />
    <EditText
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false" />
    
    <!-- Calculator buttons -->
    <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:gravity="center">
	    <Button android:id="@+id/add"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Add" />
	    <Button android:id="@+id/subtract"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Subtract" />
	</LinearLayout>
	<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:gravity="center">
		<Button android:id="@+id/multiply"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Multiply" />
	    <Button android:id="@+id/divide"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Divide" />
	    <Button android:id="@+id/factorial"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Factorial" />
	</LinearLayout>
    </LinearLayout>
</ScrollView>
    