<?xml version="1.0" encoding="utf-8"?>

<!-- Note that this is just a starting-point layout; you will have to add to it -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:gravity="center">
    <TextView
   		android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/Name" />
    <EditText
        android:id="@+id/name2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
    <TextView
   		android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/Age" />    
    <EditText
        android:id="@+id/age2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
    <TextView
        android:id="@+id/showdate"
   		android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/show_date" />
    <DatePicker
        android:id="@+id/pickdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button 
        android:id="@+id/select"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/pick_date" 
        android:onClick="showDatePickerDialog" />
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:gravity="left">
	    <Button android:id="@+id/save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Save"/>
	    <Button android:id="@+id/load"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Load"/>
	</LinearLayout>
    </LinearLayout>
</ScrollView>